--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,28 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- Materialize -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Teko:500&display=swap" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Teko:500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI=" crossorigin="anonymous"></script>
 
     <!-- Css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
                 
     <title>Document</title>
 </head>
 <body>
     <main class="container">
-        <div class="row">
-            <div class="col s12">
-                <h1>What Star Trek Character are You?</h1>
-                <p>Answer a few questions, then find out what Star Trek character you're most like!</p>
-                <button class="waves-effect waves-light btn button button-outline">Start the Quiz!</button>
-
-
-            </div>
+        <div class="ui segment">
+            <h1>What Star Trek Character are You?</h1>
+            <p>Answer a few questions, then find out what Star Trek character you're most like!</p>
+            <button class="fluid ui button">Start the Quiz!</button>
         </div>
     </main>
+
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
