--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Webfonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Teko:500&display=swap" rel="stylesheet">
 
+    <!-- Semantic Css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI=" crossorigin="anonymous"></script>
@@ -21,7 +23,7 @@
         <div class="ui segment">
             <h1>What Star Trek Character are You?</h1>
             <p>Answer a few questions, then find out what Star Trek character you're most like!</p>
-            <button class="fluid ui button">Start the Quiz!</button>
+            <a href="/survey"><button class="fluid ui button">Start the Quiz!</button></a>
         </div>
     </main>
 
