--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,7 +9,7 @@
     <!-- Webfonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto|Teko:500&display=swap" rel="stylesheet">
 
-    <!-- Semantic Css -->
+    <!-- Semantic UI -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" integrity="sha256-9mbkOfVho3ZPXfM7W8sV2SndrGDuh7wuyLjtsWeTI1Q=" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js" integrity="sha256-t8GepnyPmw9t+foMh3mKNvcorqNHamSKtKRxxpUEgFI=" crossorigin="anonymous"></script>
@@ -23,49 +23,188 @@
 <body>
     <main class="container">
         <div class="ui segment">
-            <h1>Star Trek Character Quiz</h1>
+            <h1 class="ui center aligned header">Star Trek Character Quiz</h1>
             <form action="" class="ui form">
+                <h4 class="ui horizontal divider header">
+                    About You
+                </h4>
+
                 <div class="field">
                     <label for="name">Name</label>
                     <div class="ui fluid left icon input">
-                        <input type="text" name="name" id="name" placeholder="Name">
+                        <input type="text" name="name" id="name" placeholder="Name" required>
                         <i class="user icon"></i>
                     </div>
                 </div>
+
                 <div class="field">
                     <label for="img">Image Url</label>
                     <div class="ui fluid left icon input">
-                        <input type="text" name="img" id="img" placeholder="Image Url">
+                        <input type="text" name="img" id="img" placeholder="Image Url" required>
                         <i class="image icon"></i>
                     </div>
                 </div>
+
+                <h4 class="ui horizontal divider header">
+                    Personality Questions
+                </h4>
+
                 <div class="field">  
-                    <label for="question_1">Question 1</label>
+                    <label for="question_1">1. Are you a strict follower of rules?</label>
                     <div class="ui fluid selection dropdown">
-                        <input type="hidden" name="question_1" id="question_1">
+                        <input type="hidden" name="question_1" id="question_1" required>
                         <i class="dropdown icon"></i>
-                        <div class="default text">Gender</div>
+                        <div class="default text">Select an Option</div>
                         <div class="menu">
-                            <div class="item" data-value="1">Male</div>
-                            <div class="item" data-value="0">Female</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="field">  
-                    <label for="question_2">Question 2</label>
-                    <div class="ui fluid selection dropdown">
-                        <input type="hidden" name="question_2" id="question_2">
-                        <i class="dropdown icon"></i>
-                        <div class="default text">Gender</div>
-                        <div class="menu">
-                            <div class="item" data-value="1">Male</div>
-                            <div class="item" data-value="0">Female</div>
+                            <div class="item" data-value="1">1 (Strongly Disagree)</div>
+                            <div class="item" data-value="2">2</div>
+                            <div class="item" data-value="3">3</div>
+                            <div class="item" data-value="4">4</div>
+                            <div class="item" data-value="5">5 (Strongly Agree)</div>
                         </div>
                     </div>
                 </div>
 
-              
-                <button class="fluid ui button" type="submit">Submit</button>
+                <div class="field">  
+                    <label for="question_2">2. Are you void of emotion?</label>
+                    <div class="ui fluid selection dropdown">
+                        <input type="hidden" name="question_2" id="question_2" required>
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Select an Option</div>
+                        <div class="menu">
+                            <div class="item" data-value="1">1 (Strongly Disagree)</div>
+                            <div class="item" data-value="2">2</div>
+                            <div class="item" data-value="3">3</div>
+                            <div class="item" data-value="4">4</div>
+                            <div class="item" data-value="5">5 (Strongly Agree)</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="field">  
+                    <label for="question_3">3. Are you usually cynical?</label>
+                    <div class="ui fluid selection dropdown">
+                        <input type="hidden" name="question_3" id="question_3">
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Select an Option</div>
+                        <div class="menu">
+                            <div class="item" data-value="1">1 (Strongly Disagree)</div>
+                            <div class="item" data-value="2">2</div>
+                            <div class="item" data-value="3">3</div>
+                            <div class="item" data-value="4">4</div>
+                            <div class="item" data-value="5">5 (Strongly Agree)</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="field">  
+                    <label for="question_4">4. Are you self-sacrificing?</label>
+                    <div class="ui fluid selection dropdown">
+                        <input type="hidden" name="question_4" id="question_4">
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Select an Option</div>
+                        <div class="menu">
+                            <div class="item" data-value="1">1 (Strongly Disagree)</div>
+                            <div class="item" data-value="2">2</div>
+                            <div class="item" data-value="3">3</div>
+                            <div class="item" data-value="4">4</div>
+                            <div class="item" data-value="5">5 (Strongly Agree)</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="field">  
+                    <label for="question_5">5. Do you often counsel others?</label>
+                    <div class="ui fluid selection dropdown">
+                        <input type="hidden" name="question_5" id="question_5" required>
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Select an Option</div>
+                        <div class="menu">
+                            <div class="item" data-value="1">1 (Strongly Disagree)</div>
+                            <div class="item" data-value="2">2</div>
+                            <div class="item" data-value="3">3</div>
+                            <div class="item" data-value="4">4</div>
+                            <div class="item" data-value="5">5 (Strongly Agree)</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="field">  
+                    <label for="question_6">6. Do others often have to tell you to calm down?</label>
+                    <div class="ui fluid selection dropdown">
+                        <input type="hidden" name="question_6" id="question_6" required>
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Select an Option</div>
+                        <div class="menu">
+                            <div class="item" data-value="1">1 (Strongly Disagree)</div>
+                            <div class="item" data-value="2">2</div>
+                            <div class="item" data-value="3">3</div>
+                            <div class="item" data-value="4">4</div>
+                            <div class="item" data-value="5">5 (Strongly Agree)</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="field">  
+                    <label for="question_7">7. Are you charismatic?</label>
+                    <div class="ui fluid selection dropdown">
+                        <input type="hidden" name="question_7" id="question_7" required>
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Select an Option</div>
+                        <div class="menu">
+                            <div class="item" data-value="1">1 (Strongly Disagree)</div>
+                            <div class="item" data-value="2">2</div>
+                            <div class="item" data-value="3">3</div>
+                            <div class="item" data-value="4">4</div>
+                            <div class="item" data-value="5">5 (Strongly Agree)</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="field">  
+                    <label for="question_8">8. Are you jovial?</label>
+                    <div class="ui fluid selection dropdown">
+                        <input type="hidden" name="question_8" id="question_8" required>
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Select an Option</div>
+                        <div class="menu">
+                            <div class="item" data-value="1">1 (Strongly Disagree)</div>
+                            <div class="item" data-value="2">2</div>
+                            <div class="item" data-value="3">3</div>
+                            <div class="item" data-value="4">4</div>
+                            <div class="item" data-value="5">5 (Strongly Agree)</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="field">  
+                    <label for="question_9">9. Are you good at delegating?</label>
+                    <div class="ui fluid selection dropdown">
+                        <input type="hidden" name="question_9" id="question_9" required>
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Select an Option</div>
+                        <div class="menu">
+                            <div class="item" data-value="1">1 (Strongly Disagree)</div>
+                            <div class="item" data-value="2">2</div>
+                            <div class="item" data-value="3">3</div>
+                            <div class="item" data-value="4">4</div>
+                            <div class="item" data-value="5">5 (Strongly Agree)</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="field">  
+                    <label for="question_10">10. Do you follow orders?</label>
+                    <div class="ui fluid selection dropdown">
+                        <input type="hidden" name="question_10" id="question_10" required>
+                        <i class="dropdown icon"></i>
+                        <div class="default text">Select an Option</div>
+                        <div class="menu">
+                            <div class="item" data-value="1">1 (Strongly Disagree)</div>
+                            <div class="item" data-value="2">2</div>
+                            <div class="item" data-value="3">3</div>
+                            <div class="item" data-value="4">4</div>
+                            <div class="item" data-value="5">5 (Strongly Agree)</div>
+                        </div>
+                    </div>
+                </div>
+                <button class="fluid ui button" type="submit" id="submit">Submit</button>
         </div>
 
         </form>
