--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -52,7 +52,7 @@
                     <div class="required field">
                         <label for="question_1">1. Are you a strict follower of rules?</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="dropdown" id="question_1" required />
+                            <input type="hidden" name="question_1" id="question_1" required />
                             <i class="dropdown icon"></i>
                             <div class="default text">Select an Option</div>
                             <div class="menu">
@@ -68,7 +68,7 @@
                     <div class="required field">
                         <label for="question_2">2. Are you void of emotion?</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="dropdown" id="question_2" required />
+                            <input type="hidden" name="question_2" id="question_2" required />
                             <i class="dropdown icon"></i>
                             <div class="default text">Select an Option</div>
                             <div class="menu">
@@ -84,7 +84,7 @@
                     <div class="required field">
                         <label for="question_3">3. Are you usually cynical?</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="dropdown" id="question_3" required />
+                            <input type="hidden" name="question_3" id="question_3" required />
                             <i class="dropdown icon"></i>
                             <div class="default text">Select an Option</div>
                             <div class="menu">
@@ -100,7 +100,7 @@
                     <div class="required field">
                         <label for="question_4">4. Are you self-sacrificing?</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="dropdown" id="question_4" required />
+                            <input type="hidden" name="question_4" id="question_4" required />
                             <i class="dropdown icon"></i>
                             <div class="default text">Select an Option</div>
                             <div class="menu">
@@ -116,7 +116,7 @@
                     <div class="required field">
                         <label for="question_5">5. Do you often counsel others?</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="dropdown" id="question_5" required />
+                            <input type="hidden" name="question_5" id="question_5" required />
                             <i class="dropdown icon"></i>
                             <div class="default text">Select an Option</div>
                             <div class="menu">
@@ -132,7 +132,7 @@
                     <div class="required field">
                         <label for="question_6">6. Do others often have to tell you to calm down?</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="dropdown" id="question_6" required />
+                            <input type="hidden" name="question_6" id="question_6" required />
                             <i class="dropdown icon"></i>
                             <div class="default text">Select an Option</div>
                             <div class="menu">
@@ -147,7 +147,7 @@
                     <div class="required field">
                         <label for="question_7">7. Are you charismatic?</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="dropdown" id="question_7" required />
+                            <input type="hidden" name="question_7" id="question_7" required />
                             <i class="dropdown icon"></i>
                             <div class="default text">Select an Option</div>
                             <div class="menu">
@@ -162,7 +162,7 @@
                     <div class="required field">
                         <label for="question_8">8. Are you jovial?</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="dropdown" id="question_8" required />
+                            <input type="hidden" name="question_8" id="question_8" required />
                             <i class="dropdown icon"></i>
                             <div class="default text">Select an Option</div>
                             <div class="menu">
@@ -177,7 +177,7 @@
                     <div class="required field">
                         <label for="question_9">9. Are you good at delegating?</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="dropdown" id="question_9" required />
+                            <input type="hidden" name="question_9" id="question_9" required />
                             <i class="dropdown icon"></i>
                             <div class="default text">Select an Option</div>
                             <div class="menu">
@@ -192,7 +192,7 @@
                     <div class="required field">
                         <label for="question_10">10. Do you follow orders?</label>
                         <div class="ui fluid selection dropdown">
-                            <input type="hidden" name="dropdown" id="question_10" required />
+                            <input type="hidden" name="question_10" id="question_10" required />
                             <i class="dropdown icon"></i>
                             <div class="default text">Select an Option</div>
                             <div class="menu">
